# pretrain-mini-project

./: .gitignore  GETTING_STARTED.md  INSTRUCTIONS.md  PROJECT_SUMMARY.md  README.md  makefile  pretrain_pipeline_complete.ipynb  pyproject.toml
cards/: dataset_card.md  model_card.md
src/: contamination.py  dedup_minhash.py  eval.py  generate_report.py  ingest_code.py  ingest_web.py  language_id.py  language_id_fixed.py  license_check.py  mixture_build.py  pii_redact.py  quality_filters.py  shard_webdataset.py  toxicity.py  train_baseline.py  train_curated.py
