[project]
name = "pretrain-mini"
version = "1.0.0"
description = "Mini-scale pre-training data curation and evaluation pipeline"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "datasketch>=1.6.0",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.5.0",
    "gcld3>=3.0.13",
    "detoxify>=0.5.1",
    "scrubadub>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "webdataset>=0.2.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "black>=23.0.0",
    "pytest>=7.4.0",
    "wandb>=0.16.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
